<resources>
    <string name="app_name">Yatichiri App</string>
    <string name="text_register"><u>Registrarse</u></string>
    <string name="instrucciones"><u>INDICE</u></string>
    <string name="text_instruccion">
        Bienvenidos a la aplicación “Yatichiri App”, que se dirige a todo público interesado en ampliar su aprendizaje sobre el idioma
        aymara en el nivel básico e intermedio.\n\
        El objetivo de la aplicación es enseñar lel idioma aymara, con una fundamentación lingüística,
        pragmática y cultural, aprovechando los medios tecnológicos.\n\
        En el desarrollo del curso, presentamos tres Niveles:
    </string>
    <string name="text_intro">
        En Introduccion presentamos 3 unidades:\n\
         &#160; &#160; &#160;- CONSONANTES Y VOCALES \n\
         &#160; &#160; &#160;- FONOLOGÍA \n\
         &#160; &#160; &#160;- GENERALIDADES
    </string>
    <string name="text_basico">
        En el nivel Basico presentamos 20 unidades:\n\
        &#160;<b>1)</b>Vocales\n\
        &#160;<b>2)</b>Consonantes\n\
        &#160;<b>3)</b> PRONOMRES PERSONALES\n\
        &#160;<b>4)</b> CONJUGACION DE LOS VERBOS\n\
        &#160;<b>5)</b> SALUDOS Y DESPEDIDAS\n\
        &#160;<b>6)</b> NÚMEROS CARDINALES\n\
       &#160; <b>7)</b> NÚMEROS ORDINALES\n\
        &#160;<b>8)</b> LA FAMILIA\n\
        &#160;<b>9)</b> PROFESIONES Y OCUPACIONES\n\
        &#160;<b>10)</b> PRESENTACIONES\n\
        &#160;<b>11)</b> TIEMPO\n\
                &#160;&#160; &#160;  • Estaciones\n\
                &#160; &#160; &#160; • Año\n\
                &#160; &#160; &#160; • Mes\n\
                &#160; &#160; &#160; • Dias\n\
                &#160; &#160; &#160; • Horas\n\
         &#160;<b>12)</b> LUGARES Y ARTIFICIALES\n\
         &#160;<b>13)</b> ELEMENTOS DE LA NATURALEZA\n\
                &#160; &#160; &#160; • Naturaleza\n\
                &#160; &#160; &#160; • Agua\n\
                &#160; &#160; &#160; • Tierra\n\
                &#160; &#160; &#160; • Minerales\n\
        &#160;<b>14)</b> FAUNA\n\
                &#160; &#160; &#160; • Domestico\n\
                &#160; &#160; &#160; • Silvestre\n\
                &#160; &#160; &#160; • Peces\n\
                &#160; &#160; &#160; • Pajaros\n\
                &#160; &#160; &#160; • Insectos y Otros\n\
         &#160;<b>15)</b> FLORA\n\
                &#160; &#160; &#160; • Vegetales\n\
                &#160; &#160; &#160; • Silvestre\n\
                &#160; &#160; &#160; • Flores\n\
                &#160; &#160; &#160; • Arbustos - Arboles\n\
         &#160;<b>16)</b> LOS COLORES\n\
         &#160;<b>17)</b> LOS ALIMENTOS\n\
                &#160; &#160; &#160; • Animal\n\
                &#160; &#160; &#160; • Vegetal\n\
         &#160;<b>18)</b> EL CUERPO HUMANO\n\
         &#160;<b>29)</b> ROPA\n\
    </string>
    <string name="text_intermedio">
        En el nivel Intermedio presentamos 9 unidades:\n\
         <b>1)</b> PRONOMBRES DEMOSTRATIVOS\n\
         <b>2)</b> PRONOMBRES INTERROGATIVOS\n\
         <b>3)</b> SUFIJOS \n\
            	&#160; &#160; &#160; • Interrogacíon\n\
                &#160; &#160; &#160; • Afirmación\n\
                &#160; &#160; &#160; • Negación\n\
                &#160; &#160; &#160; • Sufijo STI\n\
        <b>4)</b> PALABRAS COMPUESTAS\n\
         <b>5)</b> ADJETIVOS\n\
         <b>6)</b> SUFIJOS POSESIVOS\n\
                &#160; &#160; &#160;• Afirmativos\n\
                &#160; &#160; &#160;• Interrogativos\n\
        <b>7)</b> VERBOS INFINITIVOS\n\
         <b>8)</b> DESINENCIAS O SUFIJOS VERBALES\n\
         <b>9)</b> DIÁLOGOS\n\
    </string>
    <string name="menu">Menú</string>
    <string name="basico">Básico</string>
    <string name="intermedio">Intermedio</string>
    <string name="his1">Los aimaras o Aymaras son un grupo étnico indígena de las regiones de los Andes y del altiplano
        de América del Sur, son cerca de 2 millones de personas pertenecientes a esta étnia.\n\
        La palabra aymara deriva de tres palabras compuestas:“jaya”, (lejano),“mara” (año), “aru”
        (lenguaje), por lo que “jaya mara aru”, o simplemente “aymara”, significa “lenguaje de los antepasados”.</string>
    <string name="vocal">El alfabeto aymara consta de 29 letras entre las cuales tenemos 3 vocales:</string>
    <string name="vocal2"> Donde presentan variaciones (tipicas en la lengua aymara) que cambia su pronunciacion, significado
        y escritura. En el caso de las vocales tenemos la Dieresis  que consta de colocar 2 puntos arriba de la vocal(ä)
        que alarga la pronunciacion de las vocales donde tenemos ä=aa, ï=ii, ü=uu en el caso de las vocales esta variacion
        no es incluida dentro del alfabeto como se veran con las consonantes. </string>
    <string name="escuchar">Escuchar - ist"aña</string>
    <string name="escuchar1">Pasemos a algunos ejemplos!
escucha la pronunciacion de algunas palabras en aymara que llevan las vocales A I U  </string>
    <string name="hablar">Hablar - arsuña </string>
    <string name="hablar1">Es tu turno! repite las palabras que  veas! </string>
    <string name="ejemplosprac">Ejemplos Practicos </string>
    <string name="escribir">Escribir - qillqaña </string>
    <string name="escribira">completa las palabras con la letra A:</string>
    <string name="escribiri">completa las palabras con la letra i:</string>
    <string name="ejemplov1">ejemplo: _k_ = aka (este)</string>
    <string name="ejemplov2">ejemplo: _s_ = isi (ropa)</string>
    <string name="consonante1">Como se menciono previamente el alfabeto ayamra consta de 29 letras en las cuales tenemos 26 consonantes:</string>
    <string name="consonante2">a diferencia de las vocales tenemos que las variaciones de cada letra son tomadas como distintas dentro del alfabeto por lo tanto las siguientes consonantes del idioma español no estan incluidas:
b,c,d,f,g,h,v,z
    la pronunciaciones muy importante a la hora de aprender el aymara tenemos distintas maneras de decir una letra de acuerdo a la variacion uqe tiene y muchas letrasdel español son pronunciadas de manera distinta</string>
    <string name="consonantes3">en la escritura aymara no existen las vocales e y o. Sin embargo cuando estan delante o detras de alguna de estas cuatro consonantes postverbales (Q,QH,Q",X) la "i  se la pronuncia como si fuera la vocal e mientras que la "u" pasa a sonar como la o.</string>
    <string name="consonantes4">una palabra cambia totalmente su significado y pronunciación de acuerdo a la variante que esta tenga repasaremos algunos ejemplos: </string>
    <string name="consonantes5">repita las palabras junto a los audios para poder tener una mejor pronunciacion</string>
    <string name="pronombres">En el idioma aymara existen cuatro pronombres personales en singular y cuatro en plural.
    Para formar los pronombres en plural, solamente hay que agregarle el sufijo –NAKA a los pronombres en singular. Ej: JUMA
    (singular) JUMA+NAKA, con excepción de NAYA (yo) que solo se usara la 1° silaba
    NA+NAKA</string>
    <string name="pron1">Pasemos a algunos ejemplos!\n\
        Escucha la pronunciacion de los pronombres en aymara</string>
    <string name="pron2">Pasemos a algunos ejemplos!
escucha la pronunciacion de los pronombres en aymara</string>
    <string name="pron3">Completa los pronmobres</string>
    <string name="pron4">Ejemplo: n_y_ = naya (yo)</string>
    <string name="conjugacion1">con los pronombres personales que ya aprendimos podemos conjugar verdos de manera sencilla teniendo en cuenta las normas que se nos impone. </string>
    <string name="conjugacion2">Explicacion
primero para singular y plural: debemos colocar al pronombre una x  en la parte final
nayax singular - nanakax plural 
segundo para singular: el verbo que deseamos utilizar se encuentra al final de la oracion en el aymara, eliminamos la ultima silaba en aymara (aña, iñi, uñu) y le agregamos el sufijo de acuerdo asi esta en 1raP (ta), 2daP(i) y 3raP(tan)
luraña=lurta
segundo para plural:  son los mismos pasos que en singular con la diferncia que eliminamos lultima a silbara en español y le agregamos el sufijo de acuerdo asi esta en 1raP (pxta), 2daP(pxi) y 3raP(pxtan)
luraña = lurapxta
tercero para singular y plural: colocamos el complemete del verbo para dar sentido a la oracion y le quitamos la ultima vocal:
t"ant"a = t"ant
Conclusion:
aplicacando las reglas vara conjugar un verbo optenemos
en aymara: nayax t"ant  lurta
en español: yo hago pan
literal: yo pan hago </string>
    <string name="conjugacion3">Explicacion
primero para singular y plural: debemos colocar al pronombre una x  en la parte final
nayax singular - nanakax plural
segundo para singular: el verbo que deseamos utilizar se encuentra al final de la oracion en el aymara, eliminamos la ultima silaba en aymara (aña, iñi, uñu) y le agregamos el sufijo de acuerdo si es yo (ktti), tu(ktati), el/ella (kiti) y nosotros (ktanti)
luraña=lurktti
segundo para plural:  son los mismos pasos que en singular con la diferncia que eliminamos ultima a silbara en español y le agregamos la p antes del sufijo yo (pktti), tu(pktati), el/ella (pkiti) y nosotros (pktanti)
luraña = lurapktti
tercero para singular y plural: colocamos el complemete del verbo para dar sentido a la oracion y le quitamos la ultima vocal ademas de que para la negacion antes le colocamos el sufijo janiw:
t"ant"a = janiw t"ant
Conclusion:
aplicacando las reglas vara conjugar un verbo optenemos
en aymara: nayax janiw t'ant  lurktti
en español: yo no he hecho pan
literal: yo pan no he hecho</string>
    <string name="conjugacion4">traduce la siguiente oracion:
yo bebo agua
beber= umaña
agua= uma</string>
    <string name="conjugacion5">traduce la siguiente oracion:
yo no bebo agua
beber= umaña
agua= uma</string>
    <string name="saludos1">La interacción entre las personas en cualquier
contexto siempre comienza con el saludo. En la lengua aymara también se tienen una diversidad de
saludos de acuerdo a las circunstancias.</string>
    <string name="saludos2">Kunjamastansa =   ¿Cómo están?
          Jumasti = ¿y usted?
        Naya Walikistwa  =   Yo estoy bien
        Naya Jani walikistwa  =   Yo no estoy bien
        kawki markatätasa = ¿de que pueblo eres?
        jikisiñkamaya = hasta luego
    </string>
    <string name="saludos3">Pasemos a algunos ejemplos!
escucha la pronunciacion   </string>
    <string name="saludos4">Es tu turno! repite las palabras que  veas!</string>
    <string name="saludos5">responde a los saludos en aymara!</string>
    <string name="saludos6">Waliki=bien -- aski urukipanaya = Buenos dias -- aski jayp"ukipanaya = Buenas tardes -- aski arumakipanaya = Buenas noches</string>
    <string name="saludos8">aski jayp"ukipana = Buenas tardes</string>
    <string name="saludos9">aski arumakipana = Buenas noches</string>
    <string name="saludos10">aski jayp"ukipana = Buenos dias</string>
    <string name="familia3">Pasemos a algunos ejemplos!
escucha la pronunciacion   </string>
    <string name="familia4">Es tu turno! repite las palabras que  veas!</string>
    <string name="presentaciones1">ya sea en español o en cualquier idioma es importante conocer la manera correcta de como presentarse ante
    una o mas personas y en el aymara no es la excepcion</string>
    <string name="presentaciones2">podemos mencionar algunos ejemplos:
    Nayan sutinhaxa (coloque su nombre) = mi nombre es...
    Naya (coloque su edad) Maranitwa = yo tengo ... años
    Naya (de donde viene) Markata purjta = yo vengo del pueblo de... </string>
    <string name="presentaciones3">traduce las siguientes oraciones:</string>
    <string name="miselaneo1">al terminar de leer y comprender conjunto las pruebas(todas respondidas correctamente) el tema, presione el boton calificar para ir al siguiente nivel</string>
</resources>