<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fonbla"
    tools:context=".UI.IndiceActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instrucciones"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="30dp"
                android:textColor="#000B6A" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="182dp"
                app:srcCompat="@drawable/logins" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_instruccion"
                android:textAlignment="center"
                android:textSize="18dp"
                android:textColor="#000000"
                 />

            <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="☛ INTRODUCCION"
            android:textSize="18dp"
            android:textAlignment="center"
            android:textColor="#F80000" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="☛ BÁSICO"
                android:textSize="18dp"
                android:textAlignment="center"
                android:textColor="#03A9F4" />
            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="☛ INTERMEDIO"
                android:textSize="18dp"
                android:textAlignment="center"
                android:textColor="#4AF800" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="INTRODUCCION"
                android:textAlignment="viewStart"
                android:textColor="#F80000"
                android:textSize="22dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_intro"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="NIVEL BÁSICO"
                android:textAlignment="viewStart"
                android:textColor="#03A9F4"
                android:textSize="22dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_basico"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="NIVEL INTERMEDIO"
                android:textAlignment="viewStart"
                android:textColor="#13F403"
                android:textSize="22dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_intermedio"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textSize="18dp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>